LIST OF CHANGES

 - changes to support geno_refset repository
 - moved method for creating full file names from npg_tracking::product
   to the moniker role 

release 87.3
 - for a run on ESA, redirect to an ESA url

release 87.2
 - added method to find file with MT genes inside transcriptome repository
 - change attributes in transcriptome-find to use lazy and builder rather than
   lazy_build to conform with Moose's best practices
 - sequencing instrument checker:
     treat error reading a recipe file as non-fatal;
     adjust warning message generation to use methods supported by the poller
     object instance
 - a new factory method, create_tag_zero_object, to create st::api::lims object
   for tag zero
 - a new factory method, aggregate_xlanes, to create a list  of st::api::lims
    objects for merges across lanes

release 87.1
 - bug fix in JavaScript for run creation - the reflector cannot
   be used any longer, allow client side JS to request XML feeds
   directly from LIMs server

release 87.0
 - new role - file and directory naming factory
 - added bin/npg_move_runfolder script
 - make NovaSeq instruments represented on web pages
 - removing reflector allow client side JS to request XML feeds directly from LIMs server
 - use lims_url config file entry to set LIMs server location
 - gseq cluster hoop jumping for test 10-gbs_plex.t
 - use 'fasta' as default aligner when searching for references
 - long_info role:
     when parsing RunInfo.xml look for FlowcellLayout rather than version,
     remove unused methods and attributes,
     use run parameters file to retrieve additional information

release 86.10.1
 - following changes to npg_tracking::illumina::run::short_info role,
   patch staging monitor, which started to fail if run id could
   not be retrieved
 - other changes to staging monitor:
     improve reporting
     change the order when validating run folders, will try
       to retrieve run id first, then validate the name