@@ -1,14 +1,25 @@
 use strict;
 use warnings;
-use Test::More tests => 9;
+use Test::More tests => 10;
 use Test::Exception;
 use List::Util qw/shuffle/;
+use List::MoreUtils qw/uniq/;
 
 my $pname = q[npg_tracking::glossary::composition];
 my $cpname = q[npg_tracking::glossary::composition::component::illumina];
 use_ok ("$pname");
 use_ok ("$cpname");
 use_ok 'npg_tracking::glossary::composition::factory';
+
+package test::npg_tracking::component;
+use Moose;
+with 'npg_tracking::glossary::composition::component';
+has 'attr1' => (
+      isa       => 'Str',
+      is        => 'ro',
+      required  => 1,
+);
+package main;
 
 subtest 'empty composition' => sub {
   plan tests => 2;
@@ -122,7 +133,7 @@ subtest 'find for a large number of components' => sub {
 };
 
 subtest 'serialization' => sub {
-  plan tests => 6;
+  plan tests => 9;
 
   my $f = npg_tracking::glossary::composition::factory->new();
   my $c1 = $cpname->new(subset => 'phix', id_run => 1, position => 2);
@@ -134,7 +145,17 @@ subtest 'serialization' => sub {
   my $cmps = $f->create_composition();
   is ($cmps->digest(), $d, 'digest');
   is ($cmps->digest('md5'), $md5, 'md5 digest');
+
   is ($cmps->freeze(), $j, 'json');
+  throws_ok {$cmps->freeze(some_option => 1)}
+    qr/Options not recognised, allowed option - with_class_names/,
+    'wrong option - error';
+  is ($cmps->freeze(with_class_names => 0), $j, 'json');
+
+  my $version = `git describe --dirty --always`;
+  $version =~ s/\s+//;
+  my $ej = qq({"__CLASS__":"npg_tracking::glossary::composition-$version","components":[{"__CLASS__":"npg_tracking::glossary::composition::component::illumina-$version","id_run":1,"position":2,"subset":"human"},{"__CLASS__":"npg_tracking::glossary::composition::component::illumina-$version","id_run":1,"position":2,"subset":"phix"}]});
+  is ($cmps->freeze(with_class_names => 1), $ej, 'json with class names');
   
   $f = npg_tracking::glossary::composition::factory->new();
   $f->add_component($c2, $c1);
@@ -144,20 +165,55 @@ subtest 'serialization' => sub {
   is ($cmps->freeze(), $j, 'json is the same'); 
 };
 
+subtest 'deserialization from JSON' => sub {
+  plan tests => 14;
+
+  my $cclass = 'npg_tracking::glossary::composition::component::illumina';
+  
+  my $j = '{"components":[{"id_run":1,"position":2,"subset":"human"},{"id_run":1,"position":2,"subset":"phix"}]}';
+  throws_ok { npg_tracking::glossary::composition->thaw($j) }
+    qr/Component class unknown, try defining via component_class option/,
+    'error if component class is not known';
+  my $c;
+  lives_ok { $c = npg_tracking::glossary::composition->thaw($j, component_class => $cclass) }
+    'OK if component class supplied';
+  isa_ok ($c, 'npg_tracking::glossary::composition');
+  is ($c->num_components, 2, 'correct number of components');
+  my @classes = uniq map { ref $_ } $c->components_list;
+  ok ((scalar @classes == 1) && ($classes[0] eq $cclass), 'correct component class');
+
+  $j = '{"__CLASS__":"npg_tracking::glossary::composition-100.0","components":[{"__CLASS__":"npg_tracking::glossary::composition::component::illumina-100.0","id_run":1,"position":2,"subset":"human"},{"__CLASS__":"npg_tracking::glossary::composition::component::illumina-100.0","id_run":1,"position":2,"subset":"phix"}]}';
+  lives_ok { $c = npg_tracking::glossary::composition->thaw($j) }
+    'OK if component class is in the JSON string';
+  isa_ok ($c, 'npg_tracking::glossary::composition');
+
+  $j = '{"__CLASS__":"npg_tracking::glossary::composition","components":[{"__CLASS__":"npg_tracking::glossary::composition::component::illumina","id_run":1,"position":2,"subset":"human"},{"__CLASS__":"npg_tracking::glossary::composition::component::illumina","id_run":1,"position":2,"subset":"phix"}]}';
+  lives_ok { npg_tracking::glossary::composition->thaw($j) }
+    'OK if component class is in the JSON string';
+
+  my $tclass = 'test::npg_tracking::component';
+  lives_ok { $c = npg_tracking::glossary::composition->thaw($j, component_class => $tclass) }
+    'OK if component class is in the JSON string';
+  @classes = uniq map { ref $_ } $c->components_list;
+  ok ((scalar @classes == 1) && ($classes[0] eq $cclass), 'component class as in JSON string');
+
+  lives_ok { $c = npg_tracking::glossary::composition->thaw($j,
+    component_class => $tclass, enforce => 1) }
+    'no error passign through an extra option';
+  
+  lives_ok { $c = npg_tracking::glossary::composition->thaw($j,
+    component_class => $tclass, enforce_component_class => 0) }
+    'OK if component class is in the JSON string and other component class is supplied';
+  @classes = uniq map { ref $_ } $c->components_list;
+  ok ((scalar @classes == 1) && ($classes[0] eq $cclass), 'component class as in JSON string');
+  throws_ok { $c = npg_tracking::glossary::composition->thaw($j,
+    component_class => $tclass, enforce_component_class => 1) }
+    qr/Unexpected component class $cclass/,
+    'error if component class is in the JSON string and other component class is enforced';
+};
+
 subtest 'serialization to rpt' => sub {
   plan tests => 6;
-
-  package test::npg_tracking::component;
-  use Moose;
-  with 'npg_tracking::glossary::composition::component';
-  has 'attr1' => (
-      isa       => 'Str',
-      is        => 'ro',
-      required  => 1,
-  );
-  1;
-
-  package main;
 
   my $c1 = $cpname->new(id_run => 1, position => 2);
   is ($c1->freeze2rpt, '1:2', 'rpt component string');
