@@ -2,7 +2,9 @@ LIST OF CHANGES
 
  - changes to support geno_refset repository
  - moved method for creating full file names from npg_tracking::product
-   to the moniker role 
+   to the moniker role
+ - extension of the composition/component serialization role to ensure that the
+   serialised objects can be deserialized
 
 release 87.3
  - for a run on ESA, redirect to an ESA url
